[FIX] Ecosia dark mode

--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -89,7 +89,7 @@
   line-height: initial;
   word-wrap: break-word;
 }
-.bright .optipanel .title {
+.optisearchbox.bright .optipanel .title {
   color: #1a0dab;
 }
 
